--- a/src/routes/blogs/+page.marko
+++ b/src/routes/blogs/+page.marko
@@ -15,7 +15,7 @@
             <for|item| of=$global.allPosts>
               <div class='mb-10 flex flex-col border-b pb-10 dark:border-gray-700'>
                 <span class='text-gray-700 dark:text-gray-400'>
-                  ${item.first_published_at}<!-- <DateString date=new Date(item.first_published_at) /> -->
+                  <DateString date=new Date(item.first_published_at)/>
                 </span>
                 <a href='/blog/' + item.slug class='mt-3 text-lg font-bold hover:underline sm:text-2xl'>
                   ${item.content.title}
